test-suite/samples/typeckr/pass/local-function/base.slt
local function that() -> number
	return 10
end
local a: number = that()