test-suite/samples/typeckr/fail/function-body/incorrect_end_type.slt
local b = function() -> number
	return "Hi"
end